@@ -76,7 +76,9 @@ extern int key_talk;
 extern int key_console;
 extern int key_mlook;  // -AJA- 1999/07/27.
 extern int key_secondatk;
-extern int key_reload;  // -AJA- 2004/11/10.
+extern int key_reload;  // -AJA- 2004/11/10
+extern int key_action1; // -AJA- 2009/09/07
+extern int key_action2; // -AJA- 2009/09/07
 
 #endif  /* __E_INPUT_H__ */
 
